
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct rb_root {struct rb_node* rb_node; } ;
struct rb_node {struct rb_node* rb_left; struct rb_node* rb_right; } ;


 int __rb_rotate_left (struct rb_node*,struct rb_root*) ;
 int __rb_rotate_right (struct rb_node*,struct rb_root*) ;
 scalar_t__ ext2fs_rb_is_red (struct rb_node*) ;
 struct rb_node* ext2fs_rb_parent (struct rb_node*) ;
 int ext2fs_rb_set_black (struct rb_node*) ;
 int ext2fs_rb_set_red (struct rb_node*) ;

void ext2fs_rb_insert_color(struct rb_node *node, struct rb_root *root)
{
 struct rb_node *parent, *gparent;

 while ((parent = ext2fs_rb_parent(node)) && ext2fs_rb_is_red(parent))
 {
  gparent = ext2fs_rb_parent(parent);

  if (parent == gparent->rb_left)
  {
   {
    register struct rb_node *uncle = gparent->rb_right;
    if (uncle && ext2fs_rb_is_red(uncle))
    {
     ext2fs_rb_set_black(uncle);
     ext2fs_rb_set_black(parent);
     ext2fs_rb_set_red(gparent);
     node = gparent;
     continue;
    }
   }

   if (parent->rb_right == node)
   {
    register struct rb_node *tmp;
    __rb_rotate_left(parent, root);
    tmp = parent;
    parent = node;
    node = tmp;
   }

   ext2fs_rb_set_black(parent);
   ext2fs_rb_set_red(gparent);
   __rb_rotate_right(gparent, root);
  } else {
   {
    register struct rb_node *uncle = gparent->rb_left;
    if (uncle && ext2fs_rb_is_red(uncle))
    {
     ext2fs_rb_set_black(uncle);
     ext2fs_rb_set_black(parent);
     ext2fs_rb_set_red(gparent);
     node = gparent;
     continue;
    }
   }

   if (parent->rb_left == node)
   {
    register struct rb_node *tmp;
    __rb_rotate_right(parent, root);
    tmp = parent;
    parent = node;
    node = tmp;
   }

   ext2fs_rb_set_black(parent);
   ext2fs_rb_set_red(gparent);
   __rb_rotate_left(gparent, root);
  }
 }

 ext2fs_rb_set_black(root->rb_node);
}
